examples/valid/import/main_import.lama
import "examples/valid/import/additional_import.lama";
int i = 9;
print b;
b = a + i;
print b;