examples/invalid/import/main_import.lama
import "examples/invalid/import/additional_import.lama";
int i = 9;
print a;
b = a + i;
print b;